Finished Advanced Tools Homework

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Natalia Martineli</title>
+    <meta
+      name="description"
+      content="Natalia Martineli is a Full-Stack Web Developer based in Brazil. Check out her portfolio and get in touch!"
+    />
+    <title>Full Stack Web Developer - Natalia Martineli</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -44,16 +48,23 @@
       <h1>Natalia Martineli</h1>
       <h3>🇧🇷 Full-stack web developer, based in Brazil</h3>
       <div class="navigation-links">
-        <a href="about.html#contact" class="contact-link">Contact me</a>
-        <a href="about.html" class="about-link">About me</a>
+        <a
+          href="/about.html#contact"
+          class="contact-link"
+          title="Contact Natalia Martineli"
+          >Contact me</a
+        >
+        <a href="/about.html" class="about-link" title="About Natalia Martineli"
+          >About me</a
+        >
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
+    <div class="container mb-4">
+      <div class="app">
+        <div class="image">
           <img src="/images/yoga.png" alt="Yoga App" class="img-fluid" />
         </div>
-        <div class="col-6">
+        <div class="app-info">
           <h2 class="app-title">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -62,12 +73,14 @@
             explicabo eum dolore.
           </p>
           <div class="button">
-            <a href="#" class="app-link text-nowrap">Launch Yoga App</a>
+            <a href="#" class="app-link text-nowrap" title="Yoga App"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-6">
+      <div class="app app-invert">
+        <div class="app-info">
           <h2 class="app-title">Weather App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -76,18 +89,20 @@
             explicabo eum dolore.
           </p>
           <div class="button">
-            <a href="#" class="app-link text-nowrap">Launch Weather App</a>
+            <a href="#" class="app-link text-nowrap" title="Weather App"
+              >Launch Weather App</a
+            >
           </div>
         </div>
-        <div class="col-6">
+        <div class="image">
           <img src="/images/weather.png" alt="Weather App" class="img-fluid" />
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-6">
+      <div class="app">
+        <div class="image">
           <img src="/images/yogurt.png" alt="Yoga App" class="img-fluid" />
         </div>
-        <div class="col-6">
+        <div class="app-info">
           <h2 class="app-title">Yogurt App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -96,7 +111,9 @@
             explicabo eum dolore.
           </p>
           <div class="button">
-            <a href="#" class="app-link text-nowrap">Launch Yogurt App</a>
+            <a href="#" class="app-link text-nowrap" title="Yogurt App"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
