--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Natalia Martineli</title>
+    <meta name="description" content="" />
+    <title>About me - Natalia Martineli</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,14 +34,14 @@
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="/index.html">Home</a>
             <a class="nav-link active" href="/about.html">About me</a>
-            <a class="nav-link" href="/about.html#contact">Contact me</a>
+            <a class="nav-link" href="#contact">Contact me</a>
           </div>
         </div>
       </div>
     </nav>
     <div class="container">
       <div class="about-me">
-        <h1 class="mt-5">About me</h1>
+        <h1>About me</h1>
         <h3>Front-end developer from São Paulo, Brazil</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -49,31 +51,31 @@
         </p>
       </div>
       <div class="container-fluid">
-        <div class="row mb-5">
+        <div class="row mb-4">
           <div class="col-md-4">
             <img
               src="/images/yoga.png"
-              alt=""
-              class="img-fluid img-thumbnail to"
+              alt="Yoga App"
+              class="img-fluid img-thumbnail to mb-3"
             />
           </div>
           <div class="col-md-4">
             <img
               src="/images/weather.png"
-              alt=""
-              class="img-fluid img-thumbnail to"
+              alt="Weather App"
+              class="img-fluid img-thumbnail to mb-3"
             />
           </div>
           <div class="col-md-4">
             <img
               src="/images/yogurt.png"
-              alt=""
-              class="img-fluid img-thumbnail to"
+              alt="Yogurt App"
+              class="img-fluid img-thumbnail to mb-3"
             />
           </div>
         </div>
       </div>
-      <div id="contact">
+      <div id="contact" class="mb-5">
         <h2>📮 Contact me</h2>
         <a href="mailto:nataliamartineli@gmail.com" class="email-link">
           nataliamartineli@gmail.com
